# MinecraftFishingBot

./: .gitignore  CMakeLists.txt  MinecraftFishingBot.vcxproj  MinecraftFishingBot.vcxproj.filters  README.md
Headers/: EQMinecraftFishingBot.h  EQMinecraftFishingBotWorker.h
Resources/: Resource.qrc
Source/: EQMinecraftFishingBot.cpp  EQMinecraftFishingBotWorker.cpp  main.cpp
deployment/components/com.vendor.product/meta/: package.xml  script.qs
deployment/config/: config.xml
resources/: CMakeLists.txt  MinecraftFishingBot_de.qm  MinecraftFishingBot_de.ts  MinecraftFishingBot_es.qm  MinecraftFishingBot_es.ts  MinecraftFishingBot_fr.qm  MinecraftFishingBot_fr.ts  icon.rc
src/: EQMinecraftFishingBot.cpp  EQMinecraftFishingBot.h  EQMinecraftFishingBotWorker.cpp  EQMinecraftFishingBotWorker.h  main.cpp
